After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 724984 - While booting, tracker-miner-fs crashes.
While booting, tracker-miner-fs crashes.
Status: RESOLVED FIXED
Product: tracker
Classification: Core
Component: Miners
0.17.x
Other Linux
: Normal critical
: ---
Assigned To: tracker-general
Depends on:
Blocks:
 
 
Reported: 2014-02-22 23:47 UTC by sangu
Modified: 2014-02-24 13:57 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description sangu 2014-02-22 23:47:04 UTC
(gdb) bt
  • #0 g_object_unref
    at gobject.c line 3009
  • #1 tracker_thumbnailer_finalize
    at tracker-thumbnailer.c line 82
  • #2 g_object_unref
    at gobject.c line 3112
  • #3 g_initable_new_valist
    at ginitable.c line 230
  • #4 g_initable_new
    at ginitable.c line 146
  • #5 tracker_thumbnailer_new
    at tracker-thumbnailer.c line 262
  • #6 miner_fs_initable_init
    at tracker-miner-fs.c line 643
  • #7 miner_files_initable_init
    at tracker-miner-files.c line 310
  • #8 g_initable_new_valist
    at ginitable.c line 228
  • #9 g_initable_new
  • #10 tracker_miner_files_new
    at tracker-miner-files.c line 2444
  • #11 main
    at tracker-main.c line 934

---
tracker-0.17.4-1.fc21.x86_64
glib2-2.39.90-1.fc21.x86_64
Comment 1 Carlos Garnacho 2014-02-24 10:09:43 UTC
I pushed https://git.gnome.org/browse/tracker/commit/?id=d67ace9655f87fc659c4f7a0d5eca3f3567dd3eb to fix this, thanks for the bug report!
Comment 2 Elad Alfassa 2014-02-24 13:57:48 UTC
I can verify that this patch fixes the problem.

For Fedora users, here's a scratch build with this patch on it:
http://koji.fedoraproject.org/koji/taskinfo?taskID=6564635