libtracker-miner: clear thumbnailer internal objects on init() failure

So we don't try to free invalid pointers again on finalize()

https://bugzilla.gnome.org/show_bug.cgi?id=724984